UseCase validation, update DomainConstants and add API Documentation